--- a/src/main/resources/templates/pages/item.html
+++ b/src/main/resources/templates/pages/item.html
@@ -12,7 +12,7 @@
   <script src="/js/scripts.js"></script>
   <script src="/js/scripts2.js"></script>
   <script>
-    var storeId = document.getElementById('storeId');
+    var storeId = document.getElementById('saveStoreId');
     var div = document.getElementById('divTable1');
     var table = document.getElementById('datatable1');
     var divNum = 1;
@@ -36,12 +36,15 @@
     //processData: false,               // * 중요 *
     //enctype : 'multipart/form-data',  // * 중요 *
 
+    $(function(){
+      storeId.value = document.getElementById('storeId').value;
+    });
 
     // 저장
     function fn_save() {
       let formData = new FormData();
       let fileInput = $('.files');
-
+      console.log(storeId.value);
       for (var i = 0; i < fileInput.length; i++) {
         if (fileInput[i].files.length > 0) {
           for (var j = 0; j < fileInput[i].files.length; j++) {
@@ -437,6 +440,7 @@
 <div id="div_top" class="card" style="width:100%; height:5%">
   <div id="btnZone1" style="float:left; margin:5px 5px 5px 5px;">
     <nav style="float:right; display:inline-block;">
+      <input id="saveStoreId" type="hidden">
       <button class="button_2" onclick="fn_add();">추가</button>
       <button class="button_2" onclick="fn_del();">삭제</button>
       <button class="button_2" id="viewBtn" onclick="fn_view(); return false;">조회</button>
